[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "deltacd"
description = "DeltaCD, Delta Channel Depletion Model"
authors = [
    { name = "California Department of Water Resources", email = "kijin.nam@water.ca.gov" }
]
license = "MIT"
readme = ""
requires-python = ">=3.9,<3.13"
keywords = ["deltacd"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "pandas",
    "netcdf4",
    "xarray",
    "pyyaml",
    "numba"
]

dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/cadwrdeltamodeling/deltacd"

[project.scripts]
dcd = "deltacd.dcd:main"
detaw = "deltacd.detaw:main"
deltacd2dsm2 = "deltacd.utils.deltacd2dsm2:main"
daily2mon = "deltacd.utils.daily2mon:main"

[tool.setuptools]
packages = ["deltacd"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
