[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "deltacd"
description = "DeltaCD, Delta Channel Depletion Model"
authors = [
    { name = "California Department of Water Resources", email = "kijin.nam@water.ca.gov" }
]
license = "MIT"
readme = { file = "README.rst", content-type = "text/x-rst" }
requires-python = ">=3.9,<3.14"
keywords = ["deltacd", "hydrology"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Environment :: Console"
]
dependencies = [
    "pandas",
    "netcdf4",
    "xarray",
    "pyyaml",
    "numba"
]

dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/cadwrdeltamodeling/deltacd"
Source = "https://github.com/cadwrdeltamodeling/deltacd"
"Bug Tracker" = "https://github.com/cadwrdeltamodeling/deltacd/issues"
Documentation = "https://github.com/cadwrdeltamodeling/deltacd#readme"

[project.scripts]
dcd = "deltacd.dcd:main"
detaw = "deltacd.detaw:main"
deltacd2dsm2 = "deltacd.utils.deltacd2dsm2:main"
deltacd2calsim3 = "deltacd.utils.deltacd2calsim3:main"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

[tool.setuptools.packages.find]
where = ["."]
include = ["deltacd*"]
exclude = ["tests*", "docs*"]
