[flake8]
max-line-length = 100
ignore = E122,E123,E126,E127,E128,E731,E722
exclude = build,deltacd/_version.py,tests,conda.recipe,.git,versioneer.py,benchmarks,.asv

[tool:pytest]
norecursedirs= .* *.egg* build dist conda.recipe
addopts =
    --junitxml=junit.xml
    --ignore setup.py
    --ignore run_test.py
    --tb native
    --strict-markers
    --durations=20
markers =
    serial: execute test serially (to avoid race conditions)

[versioneer]
VCS = git
versionfile_source = deltacd/_version.py
versionfile_build = deltacd/_version.py
tag_prefix =
parentdir_prefix = deltacd-

[bdist_wheel]
universal=1

[metadata]
project_urls =
    GitHub: issues = https://github.com/cadwrdeltamodeling/deltacd/issues
    GitHub: repo = https://github.com/cadwrdeltamodeling/deltacd
description = DeltaCD, Delta Channel Depletion Model
long_description_content_type = text/x-rst
long_description = file: README.rst

[options]
python_requires = >=3.7